src/test/deca/context/invalid/init-float-boolean.deca
// Description : 
//	 test d'initialisation float <-- boolean
// Resultats :
//	 6:11: Non compatible assignment of expression
{
	float f = true;
}